<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Al-Qur\'an</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="surah">Surah</string>
    <string name="juz">Juz</string>
    <string name="page">Page</string>
    <string name="verses">%d verses</string>
    <string name="search_quran">Search Qur\'an…</string>
    <string name="bismillah">بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</string>
    <string name="ayah">Ayah</string>
    <string name="play_audio">Play Audio</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
</resources>
